Added Resume Link

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ footer-links:
   github: AkshatSh
   instagram: akshats77
   linkedin: akshatsh
+  resume: AkshatResumeSept24th2018.pdf
   pinterest:
   rss: a # just type anything here for a working RSS icon
   twitter: # jekyllrb
