--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Akshat Shrivastava
 
 # Short bio or description (displayed in the header)
-description: Master's Student at the University of Washington
+description: Machine Learning Engineer at Facebook
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/9097613?s=460&v=4
