--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Akshat Shrivastava
 
 # Short bio or description (displayed in the header)
-description: Research Scientist at Meta AI (FAIR)
+description: Co-founder & CTO at Perceptron AI
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/9097613?s=460&v=4
@@ -18,16 +18,16 @@ avatar: https://avatars1.githubusercontent.com/u/9097613?s=460&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: akshats@cs.uw.edu
+  email: akshatsh77@gmail.com
   facebook: akshat.shrivastava.1420
   flickr:
   github: AkshatSh
   instagram: akshats77
   linkedin: akshatsh
-  resume: AkshatResumeOctober4th2018.pdf
+  # resume: AkshatResumeOctober4th2018.pdf
   pinterest:
   rss: a # just type anything here for a working RSS icon
-  twitter: # jekyllrb
+  twitter: AkshatS07 # jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
